2014-10-04  David B. Lamkins  <david@lamkins.net>

	* aplwrap.c (key_press_event): Add keyboard accellerators for
	commonly used menu items.

	* menu.c (build_menubar): Add keyboard accellerators for commonly
	used menu items.

	* edit.c (build_edit_menubar): Add keyboard accellerators for
	commonly used menu items.

	* menu.c (remember_shortcut, add_shortcut, import_file): Remember
	recently used folders as sidebar shortcuts in Open File dialog.

	* edit.h (): Keep function editor window open upon syntax error.

	* edit.c (edit_close, edit_save_object, edit_delete_real): Keep
	function editor window open upon syntax error.

	* menu.c (import_file): Add filters to the Open File dialog.

2014-10-03  David B. Lamkins  <david@lamkins.net>

	* menu.h (): Implemented file Open, Save and Save As.

	* edit.h (): Implemented file Open, Save and Save As.

	* menu.c (import_file, set_filename, save_log, save_log_as)
	(build_menubar): Implemented file Open, Save and Save As.

	* edit.c (set_status_line, edit_save_object_cb)
	(edit_save_object, clone_file, edit_save_file, edit_save_file_as)
	(edit_delete_real, edit_delete_event, build_edit_menubar)
	(edit_object, edit_file): Implemented file Open, Save and Save As.

2014-10-03  David B. Lamkins  <david@lamkins.net>

	* menu.c (open_object_cb): Fit edit object selector to width of
	longest name.

2014-10-03  David B. Lamkins  <david@lamkins.net>

	* menu.c (settings_cb, build_menubar): Add mnemonics to menus and
	menu items.

	* edit.c (trim_length, edit_function_cb): Strip trailing blanks
	from function lines.
	(build_edit_menubar): Add mnemonics to menus and menu items.

2014-10-03  David B. Lamkins  <david@lamkins.net>

	* edit.c (set_status_line): Correct line count in status line.

2014-10-03  David B. Lamkins  <david@lamkins.net>

	* edit.h (struct buffer_s): Removed modified member; we now rely
	upon the GtkTextBuffer's modification query.

	* edit.c (set_status_line, edit_mark_set_event, edit_save_cb)